# nano-qmflows

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  Tutorial.rst  conftest.py  doc_environment.yml  doc_requirements.txt  install_requirements.txt  linting_requirements.txt  plot_coupling.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 10_feature_request.md  20_help_request.md
.github/PUll_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  pypi.yaml  pythonapp.yml  wheels.yaml
data/carboxylic_acids/: dataset.csv
data/schemas/: schema_workflows.yml
docs/: Makefile  absorption_spectrum.rst  command_line.rst  conf.py  coop.rst  cp2k_interface.rst  derivative_coupling.rst  derivative_couplings.rst  distribute_absorption_spectrum.rst  docs_command_line.rst  docs_cp2k_interface.rst  docs_integrals.rst  documentation.rst  index.rst  installation  integrals.rst  intro.rst  ipr.rst  make.bat  molecular_orbitals.rst  single_points.rst  theory.rst  tutorial.rst  tutorials.rst  workflows.rst
docs/source/: conf.py  index.rst
include/: H5pubconf.h  namd.hpp
include/libint2/: basis.h  config.h  libint2_iface.h  libint2_params.h  libint2_types.h
jekyll_nac/: Tutorial_coupling_calculation.md
jupyterNotebooks/: Fourier transform.ipynb  Tutorial_coupling_calculation.ipynb  coupling_workflow.ipynb  pyxaid-CP2K.ipynb
libinit/: compile.sh  compute_integrals.cc  test_bind.py
libint/: INSTALLATION.md  compile.sh  compute_integrals.cc  compute_integrals.pyi  hdf5.cc  py_compute_integrals.cc
libint/include/: compute_integrals.hpp  namd.h  namd.hpp
licenses/: LICENSE_LIBINT2.txt  README.rst  hdf5.txt
nac/: __init__.py  common.py  hdf5_interface.py
nac/analysis/: __init__.py  tools.py
nac/basis/: aux_fit.json
nac/basisSet/: Normalization.hs  __init__.py  basisNormalization.py  contractedGFs.py
nac/distribution/: distribute_jobs.py
nac/formats/: __init__.py  cp2KtoMolden.py
nac/integrals/: __init__.py  absorptionSpectrum.py  electronTransfer.py  fourierTransform.py  multipoleIntegrals.py  multipoleObaraSaika.c  multipoleObaraSaika.pyx  multipole_matrices.py  nonAdiabaticCoupling.py  obaraSaika.c  obaraSaika.html  obaraSaika.pyx  overlapIntegral.py  realSpaceWf.py  spherical_Cartesian_cgf.py
nac/schedule/: __init__.py  components.py  hdf5_interface.py  scheduleCP2K.py  scheduleCoupling.py  scheduleCp2k.py  scheduleET.py  scheduleOrca.py
nac/templates/: namd.json
nac/workflows/: __init__.py  initialization.py  initialization_flymake.py  input_validation.py  run_workflow.py  schemas.py  templates.py  tools.py  valence_electrons.json  workflow_AbsortionSpectrum.py  workflow_ET.py  workflow_absorption_spectrum.py  workflow_coop.py  workflow_coupling.py  workflow_cube.py  workflow_farming.py  workflow_ipr.py  workflow_overlap_dephasing.py  workflow_phase_references.py  workflow_single_points.py  workflow_stddft_spectrum.py
nanoqm/: __init__.py  __version__.py  _data.py  _logger.py  _monkey_patch.py  _version.py  _version_info.py  common.py  compute_integrals.pyi
nanoqm/analysis/: tools.py
nanoqm/basis/: BASIS_ADMM  valence_electrons.json
nanoqm/integrals/: __init__.py  multipole_matrices.py  nonAdiabaticCoupling.py
nanoqm/schedule/: __init__.py  components.py  scheduleCP2K.py  scheduleCoupling.py
nanoqm/workflows/: __init__.py  distribute_jobs.py  initialization.py  input_validation.py  orbitals_type.py  run_workflow.py  schemas.py  templates.py  tools.py  workflow_coop.py  workflow_coupling.py  workflow_ipr.py  workflow_single_points.py  workflow_stddft_spectrum.py
scripts/: #distribute.py#  AnalysisPYXAID.py  MOs_energies.py  components.py  convert_legacy_hdf5.py  distribute.py  download_cp2k.sh  eigenvalues_energies.py  energy_plot.py  get_whl_name.py  mergeHDF5.py  prepare_test_dir.sh  pyxaid_nac.py  recover_hdf5.py  reenumerate.py  removeNonConverged.py  spectralAnalysis.py  status.py  workflow_ET.py  workflow_coupling.py  workflow_cube.py
scripts/Analysis/: AnalysisPYXAID.py  MOs_energies.py  dephasingAnalysis.py  functionsKspace.py  histogram.py  interactive.py  kspace_density.py  plot_coupling.py  plot_decho.py  plot_out0.py  plot_spectra.py  spectralAnalysis.py
scripts/Submission/: distribute_jobs.py
scripts/cli/: namd.py  run_workflow.py
scripts/distribution/: coupling.sh  distribute_jobs.py  merge_job.py
scripts/hamiltonians/: plot_couplings.py  plot_mos_energies.py  plot_spectra.py
scripts/kspace/: kspace_density.py
scripts/mpi/: call_mpi_multipole.py  pickle_fun.pkl  results.npy
scripts/pyxaid/: iconds_excess_energy.py  plot_average_energy.py  plot_cooling.py  plot_spectra_pyxaid.py  plot_states_pops.py
scripts/qmflows/: README.rst  convolution.py  coordination_ldos.py  dos_cp2k.py  mergeHDF5.py  opt_anion_cp2k.py  opt_cation_cp2k.py  opt_cp2k.py  plot_cooling.py  plot_dos.py  rdf.py  (+3 more)
src/: compute_integrals.cc
test/: __init__.py  benchmark_absorption.py  benchmark_coupling.py  benchmark_overlaps.py  cube_density.py  performance_overlap.py  real_space_wf.py  test_absorption_spectrum.py  test_analysis_tools.py  test_basis_normalization.py  test_cart2spherical.py  test_citation_cff.py  test_cli.py  test_common.py  test_coupling.py  test_cp2k_executable.py  test_cpk2_error_call.py  test_cube_density.py  test_distribute.py  test_fast_coupplings.py  test_initialization.py  test_input_validation.py  test_integrals.py  test_multipole.py  test_multipoleOverlap.py  test_mypy.py  test_obaraSaika.py  test_oscillator.py  test_overlap_cp2k.py  test_overlap_turbomole.py  test_read_cp2k_basis.py  test_requirements_txt.py  test_run_workflow.py  test_schemas.py  test_sphericals_cp2k.py  test_stdft.py  test_tools.py  test_version.py  test_worflow_single_points.py  test_workflow_IPR.py  (+4 more)
tools/: install_cpp_deps.sh
typings/: README.rst
workflows/: workflow_AbsortionSpectrum.py  workflow_ET.py  workflow_coupling.py
(+141 files in other folders)
