[metadata]
description_file = README.rst
license_file = LICENSE

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = nanoqm

[pycodestyle]
ignore = E302,E301,E501,W504  # E302 & E301 due pycodestyle's awful support for @overload
max-line-length = 100

[tool:pytest]
testpaths = test
addopts = --tb=auto --cov --cov-report xml --cov-report term --cov-report html
markers = slow: A marker for slow tests requiring external quantum-chemical packages.

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[pydocstyle]
add-ignore = D401
